# muffin-tidy-app

./: CLAUDE.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: export.rs  lib.rs  livephoto.rs  main.rs  scanner.rs  thumb.rs
src/components/: ExportDialog.vue  Lightbox.vue  PreviewPanel.vue  StatusBar.vue  ThumbnailCard.vue  ThumbnailGrid.vue  TitleBar.vue
src/composables/: useKeyboard.ts  useThumbQueue.ts
src/stores/: project.ts
src/views/: HomeView.vue  PreloadView.vue  WorkspaceView.vue
