[package]
name = "muffin-tidy-app"
version = "0.2.1"
description = "Muffin Tidy - 媒体文件整理工具"
authors = ["Mufeng"]
edition = "2021"

[lib]
name = "muffin_tidy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "tiff", "bmp", "ico"] }
jpeg-decoder = "0.3"
rayon = "1"
sha2 = "0.10"
hex = "0.4"
nom-exif = "2"
dunce = "1"
once_cell = "1"
urlencoding = "2"
base64 = "0.22"
filetime = "0.2"

# Windows: WIC for HEIC / RAW decoding, Shell thumbnail for video first-frame
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_UI_Shell",
] }
